fixed valign and search

--- a/client/goat-guru/create/create.styl
+++ b/client/goat-guru/create/create.styl
@@ -81,7 +81,8 @@
 	red-button();
 	background-color: transparent;
 	border: none;
-	font-size: 28px;
+	font-size: 31px;
+	text-transform: uppercase;
 }
 
 .create-view {
