--- a/client/main.styl
+++ b/client/main.styl
@@ -58,6 +58,24 @@ html, body {
 	  overflow: hidden;
 }
 
+.dialog.await {
+	font-family: 'Fresca';
+	text-align: center;
+	h2 {
+		background: #555;
+		color: #FFF;
+		text-shadow: 0 0 0;
+		font: 30px/35px 'BleakChop';
+	}
+	.content {
+		padding: 0;
+	}
+	.inner-await {
+		padding: 30px;
+		font-size: 15px;
+	}
+}
+
 .shelf {
 	border-bottom: 10px solid #42210B;
 	box-shadow: 0 10px 8px rgba(black, .15);
@@ -81,6 +99,9 @@ html, body {
 	}
 }
 
+#problem {
+	visibility: hidden;
+}
 
 .avatar {
 	border-radius: 50%;
@@ -200,16 +221,6 @@ html, body {
 		}
 	}
 
-	outline-text(size, color) {
-		str = ''
-		for num in 1 .. 30 {
-			str += '0 0 ' + size + ' ' + color + ', ';
-		}
-		str += '0 0 ' + size + ' ' + color;
-		content: unquote(str);
-		text-shadow: unquote(str);
-	}
-
 
 	.nav-user {
 		position: absolute;
@@ -271,8 +282,8 @@ html, body {
 	margin-left: -185px;
 	width: 330px;
 	height: 60px;
-	padding: 10px;
-	font: 60px 'BleakChop';
+	padding: 10px 70px 10px 10px;
+	font: 80px 'BleakChop';
 	text-indent: 10px;
 	-webkit-text-stroke: 2px darken(blue, 17);
 	-webkit-text-fill-color: #FDD43A; 
@@ -283,21 +294,43 @@ html, body {
 	background: url('/app!common/textures/handmadepaper.png');
 	cursor: pointer;
 	border: 10px solid black;
-	transition-property: opacity, margin, width;
+	transition-property: opacity, margin, width, height;
 	transition-duration: .15s;
-	transition-delay: .15s, 0s, 0s;
+	transition-delay: .15s, 0s, 0s, 0s;
 	z-index: 9999;
 	box-shadow: 0 0 20px rgba(black);
+	text-align: center;
 	&:focus, &.active {
 		outline: 0;
 		cursor: text;
 		z-index: 999;
-		size = 600px;
+		size = 940px;
+		height: 80px;
 		width: size;
 		opacity: 1;
-		margin-left: -((size + 20)/2) - 10;
+		margin-left: -((size + 20)/2) - 40;
 		transition-duration: .15s;
-		transition-delay: 0, .15s, .15s;
+		transition-delay: 0, .15s, .15s, .15s;
+	}
+}
+
+.global-search-bar {
+	position: relative;
+	.close {
+		cursor: pointer;
+		display: none;
+		position: absolute;
+		right: -7px;
+		top: -67px;
+		font: 80px 'BleakChop';
+		z-index: 999;
+		color: #777;
+		&:hover {
+			color: #333;
+		}
+		&.active {
+			display: block;
+		}
 	}
 }
 
@@ -324,15 +357,15 @@ html, body {
 			top: 0;
 		}
 		.close {
-			top: 7px;
-			right: 32px;
-			font-size: 22px;
+			display: none;
 		}
 
 		h5 {
 			text-shadow: 0 0 0;
 			color: #333;
 		}
-		
+	}
+	.overlay {
+		z-index: 0;
 	}
 }
